<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/placeholder"
        android:title="@string/title_map" />
    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/notification"
        android:title="@string/title_notification" />
    <item
        android:id="@+id/navigation_article"
        android:icon="@drawable/news"
        android:title="@string/title_article" />
    <item
        android:id="@+id/navigation_alert"
        android:icon="@drawable/alert"
        android:title="@string/title_alert" />
    <item
        android:id="@+id/navigation_quotes"
        android:icon="@drawable/quotation"
        android:title="@string/title_quotes" />

</menu>
