<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="6dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="6dp"
    android:layout_marginBottom="6dp"
    android:background="@drawable/background_white_news"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/articleProfileImg"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/news_profile_image_shape"
                android:contentDescription="null" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profileNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/profileName"
                    android:textColor="#454F63"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/articleDateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/articleDate"
                    android:textColor="#454F63"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/ImageArticleContentTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ImageItemArticleContent" />

        <ImageView
            android:id="@+id/newsContentImg"
            android:layout_width="352dp"
            android:layout_height="137dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:background="@drawable/news_profile_image_shape"
            android:contentDescription="null"
            android:maxHeight="250dp"
            app:srcCompat="@drawable/logo"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/linkTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:text="TextView"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#F4F4F6FD"
            android:divider="?android:dividerHorizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/shareImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/icons_share" />


            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/likesNumberTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_medium   "
                android:gravity="center"
                android:text="@string/LikesNumber"
                android:textColor="#454F63" />

            <ImageView
                android:id="@+id/likeImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="fitEnd"
                android:src="@drawable/icons_like" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#F4F4F6FD"
            android:divider="?android:dividerHorizontal" />
    </LinearLayout>

</androidx.cardview.widget.CardView>

